--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-__pycache__/asteroid.cpython-312.pyc
-__pycache__/asteroidfield.cpython-312.pyc
-__pycache__/background.cpython-312.pyc
-__pycache__/circleshape.cpython-312.pyc
-__pycache__/constants.cpython-312.pyc
-__pycache__/menu.cpython-312.pyc
-__pycache__/player.cpython-312.pyc
-__pycache__/shot.cpython-312.pyc
+__pycache__/*.*
+
+env/*.*
+
+Sci-Fi Music Pack.zip
